get papers_by_type

--- a/notebooks/03-query_to_dataframe/build_read_source_function_other_media.Rmd
+++ b/notebooks/03-query_to_dataframe/build_read_source_function_other_media.Rmd
@@ -6,6 +6,16 @@ output: html_notebook
 ```{r}
 library(petro.One)
 
+my_url <- make_search_url(query = "pressure"
+                          )
+
+papers_by_type(my_url)
+```
+
+
+```{r}
+library(petro.One)
+
 my_url <- make_search_url(query = "pressure", 
                           # dc_type = "journal-paper",
                           dc_type = "other",
