--- a/README.Rmd
+++ b/README.Rmd
@@ -128,8 +128,9 @@ my_url <- make_search_url(query = "neural network",
                           to_year   = 1999, 
                           how = "all")
 
-df <- onepetro_page_to_dataframe(my_url)
-df
+papers_by_type(my_url)
+#df <- onepetro_page_to_dataframe(my_url)
+#df
 ```
 
 And these are the terms that repeat more freqently:
