--- a/inst/result-item/test_master_contd_1.Rmd
+++ b/inst/result-item/test_master_contd_1.Rmd
@@ -11,63 +11,25 @@ library(petro.One)
 
 
 ```{r}
-url <- "https://www.onepetro.org/search?start=0&q=pressure&from_year=&peer_reviewed=&published_between=&to_year=&rows="
+.url_pres <- "https://www.onepetro.org/search?start=0&q=pressure&from_year=&peer_reviewed=&published_between=&to_year=&rows="
+
+url_100 <- function(url, page_size) {
+    paste0(url, page_size)         # join the number of rows to the URL
+}
+
+url_pres <- url_100(.url_pres, 100)
 
 make_webpage_of_size <- function(url, page_size) {
-    url <- paste0(url, page_size)         # join the number of rows to the URL
-    xml2::read_html(url)
+    xml2::read_html(url_100(url, 100))
 }
 
-webpage_100 <- make_webpage_of_size(url, 100)
+url_pres
+webpage_100 <- make_webpage_of_size(.url_pres, 100)
+webpage_pres <- webpage_100
 ```
 
 
 
-```{r}
-get_dc_type <- function(webpage) {
-    
-    dc_type_0 <- html_nodes(webpage, '.result-item') %>%
-        html_attr("data-type") %>% 
-        trimws %>%         # remove blanks
-        head(., -1)        # discard last row
-    
-    col2 <- html_nodes(webpage, '.result-item') %>%
-        html_attr("data-itemid") %>% 
-        gsub("data-cite-id=", "", .) %>% 
-        trimws %>% 
-        head(., -1)
-    
-    # col2_df <- data.frame(do.call(rbind, strsplit(col2, "/")), stringsAsFactors = FALSE)
-    col2_split <- strsplit(col2, "/")
-    col2_df <- data.frame(t(sapply(col2_split, '[', 1:max(sapply(col2_split, length)))),
-                          stringsAsFactors = FALSE)
-    
-    dc_type <- col2_df %>%
-        rename(dc_type_1 = X1, paper_id = X2, dc_type_2 = X3, sup = X4) %>%
-        mutate(x1x3 = ifelse(dc_type_1 == dc_type_2, TRUE, FALSE)) %>%
-        mutate(dc_type = ifelse(dc_type_2 %in% "SUPPLEMENTARY", "media", dc_type_1)) %>% 
-        mutate(dc_type = ifelse(dc_type_1 %in% "book", "chapter", dc_type))
-    
-    # number of columns of result is not a multiple of vector length (arg 154)
-    # cbind(dc_type, result_item_source)
-    tibble::as.tibble(cbind(dc_type_0, dc_type))
-}
-```
-
-
-```{r}
-webpage <- webpage_100
-
-data_itemid <- html_nodes(webpage, '.result-item') %>%
-    html_attr("data-itemid") %>%      # extract data-itemid
-    gsub("data-cite-id=", "", .) %>% 
-    trimws %>% 
-    head(., -1)
-
-
-
-head(data_itemid)
-```
 
 ```{r get_data_itemid}
 get_data_itemid <- function(webpage) {
@@ -83,8 +45,21 @@ get_data_itemid <- function(webpage) {
 }
 
 
-get_data_itemid(webpage)
+get_data_itemid(webpage_pres)
 ```
+
+```{r}
+url_nn <- make_search_url(query = "neural network",
+                          from_year = 1970,
+                          to_year   = 1999,
+                          how = "all",
+                          rows = 100)
+
+webpage_nn <- xml2::read_html(url_nn)
+get_data_itemid(webpage_nn)
+```
+
+
 
 
 ```{r get_dc_type-p1}
@@ -97,19 +72,31 @@ get_dc_type_raw <- function(webpage) {
     
     data_itemid <- get_data_itemid(webpage)
     
-    dc_type <- data_itemid %>%
+    if (ncol(data_itemid) > 2) {
+        dc_type <- data_itemid %>%
         rename(dc_type_1 = X1, paper_id = X2, dc_type_2 = X3, sup = X4) %>%
         mutate(x1x3 = ifelse(dc_type_1 == dc_type_2, TRUE, FALSE)) %>%
         mutate(dc_type = ifelse(dc_type_2 %in% "SUPPLEMENTARY", "media", dc_type_1)) %>% 
         mutate(dc_type = ifelse(dc_type_1 %in% "book", "chapter", dc_type))
+    } else {
+        dc_type <- data_itemid %>%
+           rename(dc_type = X1, paper_id = X2) 
+    }
+    
     
     # number of columns of result is not a multiple of vector length (arg 154)
     tibble::as.tibble(cbind(dc_type_0, dc_type))
 }
 
-dc_type_raw <- get_dc_type_raw(webpage)
-dc_type_raw
+dc_type_raw_pres <- get_dc_type_raw(webpage_pres)
+dc_type_raw_pres
 ```
+
+```{r}
+dc_type_raw_nn <- get_dc_type_raw(webpage_nn)
+dc_type_raw_nn
+```
+
 
 ```{r get_dc_type}
 get_dc_type <- function(webpage) {
@@ -117,24 +104,21 @@ get_dc_type <- function(webpage) {
     dc_type_raw$dc_type
 }
 
-dc_type <- get_dc_type(webpage)
-dc_type
+dc_type_pres <- get_dc_type(webpage_pres)
+dc_type_pres
+```
+
+
+```{r}
+dc_type_nn <- get_dc_type(webpage_nn)
+dc_type_nn
 ```
 
 
 
-
-
-
-
-
-
-
-
-
-
 ```{r}
-unique(dc_type)
+unique(dc_type_pres)
+unique(dc_type_nn)
 ```
 
 
@@ -143,7 +127,7 @@ unique(dc_type)
 * Also observe that the total number of papers must be the same as sum of all types.
 
 ```{r dc_type_table_sum}
-dc_type <- data.frame(dc_type = get_dc_type(webpage))
+dc_type <- data.frame(dc_type = get_dc_type(webpage_pres))
 
 dc_type %>% 
     group_by(dc_type) %>% 
@@ -162,12 +146,23 @@ sum(.Last.value$count)
 # 1000         16       3
 ```
 
+```{r}
+dc_type <- data.frame(dc_type = get_dc_type(webpage_nn))
+
+dc_type %>% 
+    group_by(dc_type) %>% 
+    summarise(count = n())
+
+sum(.Last.value$count)
+```
+
+
 ## Titles
 
 `Titles` are not the same size as `dc_type` above. Why?
 
 ```{r titles_do_not_match_dc-type}
-df.titles <- petro.One:::read_titles(webpage)
+df.titles <- petro.One:::read_titles(webpage_pres)
 dim(df.titles)
 # 100  97   1
 # 600 573   1
@@ -195,22 +190,32 @@ get_book_title <- function(webpage) {
         trimws
 }
 
-get_book_title(webpage)
+get_book_title(webpage_pres)
+```
+
+```{r}
+get_book_title(webpage_nn)
 ```
 
 ### merge titles and dc_type
 It they match, ther shouldn't be any error
 
 ```{r merge-book_title-dc_type, rows.print=25}
-dc_type <- get_dc_type(webpage)
-book_title <- get_book_title(webpage)
+dc_type    <- get_dc_type(webpage_pres)
+book_title <- get_book_title(webpage_pres)
+tibble::as.tibble(cbind(book_title, dc_type))
+```
+
+```{r merge-book_title-dc_type, rows.print=25}
+dc_type    <- get_dc_type(webpage_nn)
+book_title <- get_book_title(webpage_nn)
 tibble::as.tibble(cbind(book_title, dc_type))
 ```
 
 ## Authors
 
 
-```{r function-get_authors}
+```{r function-get_authors, , rows.print=25}
 
 get_result_item_authors <- function(webpage) {
     html_nodes(webpage, '.result-item') %>%
@@ -249,13 +254,25 @@ get_authors <- function(webpage) {
                stringsAsFactors = FALSE)
 }
 
-get_authors(webpage)
+get_authors(webpage_pres)
 ```
 
-```{r merge-dc_type-book_title-authors}
-dc_type    <- get_dc_type(webpage)
-book_title <- get_book_title(webpage)
-authors    <- get_authors(webpage)
+```{r , rows.print=25}
+get_authors(webpage_nn)
+```
+
+
+```{r merge-dc_type-book_title-authors, rows.print=25}
+dc_type    <- get_dc_type(webpage_pres)
+book_title <- get_book_title(webpage_pres)
+authors    <- get_authors(webpage_pres)
+tibble::as.tibble(cbind(book_title, dc_type, authors))
+```
+
+```{r merge-dc_type-book_title-authors, rows.print=25}
+dc_type    <- get_dc_type(webpage_nn)
+book_title <- get_book_title(webpage_nn)
+authors    <- get_authors(webpage_nn)
 tibble::as.tibble(cbind(book_title, dc_type, authors))
 ```
 
@@ -277,9 +294,14 @@ get_year <- function(webpage) {
 }
 
 
-get_year(webpage)
+get_year(webpage_pres)
 
 ```
+
+```{r}
+get_year(webpage_nn)
+```
+
 
 ## Sources
 
@@ -295,22 +317,68 @@ get_source <- function(webpage) {
     sapply(item_authors, f)
 }
 
-get_source(webpage)
+get_source(webpage_pres)
 ```
+
+```{r}
+get_source(webpage_nn)
+```
+
 
 ## Merge all
 
 ```{r rows.print=25, merge-dc_type-book_title-authors-year-source}
-dc_type    <- get_dc_type(webpage)
-book_title <- get_book_title(webpage)
-authors    <- get_authors(webpage)
-year       <- get_year(webpage)
-source     <- get_source(webpage)
+dc_type    <- get_dc_type(webpage_pres)
+book_title <- get_book_title(webpage_pres)
+authors    <- get_authors(webpage_pres)
+year       <- get_year(webpage_pres)
+source     <- get_source(webpage_pres)
 
-tibble::as.tibble(cbind(book_title, dc_type, authors, year, source))
+all_pres <- tibble::as.tibble(cbind(book_title, dc_type, authors, year, source))
+all_pres
 ```
 
 
+```{r rows.print=25, merge-dc_type-book_title-authors-year-source}
+dc_type    <- get_dc_type(webpage_nn)
+book_title <- get_book_title(webpage_nn)
+authors    <- get_authors(webpage_nn)
+year       <- get_year(webpage_nn)
+source     <- get_source(webpage_nn)
+
+all_nn <- tibble::as.tibble(cbind(book_title, dc_type, authors, year, source))
+all_nn
+```
+
+
+```{r}
+table(all_pres$dc_type)
+```
+
+```{r}
+table(all_nn$dc_type)
+```
+
+
+```{r, rows.print=25}
+get_papers_from_result_item <- function(url) {
+    webpage <- xml2::read_html(url)
+
+    dc_type    <- get_dc_type(webpage)
+    book_title <- get_book_title(webpage)
+    authors    <- get_authors(webpage)
+    year       <- get_year(webpage)
+    source     <- get_source(webpage)
+    tibble::as.tibble(cbind(book_title, dc_type, authors, year, source))
+}
+
+get_papers_from_result_item(url_pres)
+
+```
+
+```{r, rows.print=25}
+get_papers_from_result_item(url_nn)
+```
 
 
 
