--- a/notebooks/why_doesn_not_like_more_than_1000_papers.Rmd
+++ b/notebooks/why_doesn_not_like_more_than_1000_papers.Rmd
@@ -43,8 +43,6 @@ by.discipline.dd
 
 We try this other one with `1300+` papers.
 
-
-
 ```{r cache=TRUE}
 library(petro.One)
 
@@ -70,9 +68,12 @@ table(by.discipline.dd$papers$keyword)
 my.url <- by.discipline.dd$keywords$url[3]
 my.url
 get_papers_count(my.url)
+# 79
 # onepetro_page_to_dataframe(my.url)
 
 ```
+
+
 ```{r}
 onepetro_page_to_dataframe(my.url)
 ```
@@ -90,9 +91,12 @@ url.2 <- make_search_url(my.sf, how = "all", rows = paper_count)
 url.2
 papers.df <- onepetro_page_to_dataframe(url.2)
 ```
+```{r}
+papers.df
+```
 
 ```{r}
-# "conference-paper" are the main category of papersa
+# "conference-paper" are the main category of papers
 library(petro.One)
 
 recno <- 2
@@ -103,6 +107,24 @@ paper_count <- get_papers_count(url.1)
 paper_count
 url.2 <- make_search_url(my.sf, how = "all", rows = paper_count)
 url.2
+```
+
+
+```{r}
+papers.df.j <- read_multipage(url.2) %>% 
+    filter(dc_type == "journal-paper")
+papers.df.j
+```
+
+```{r}
+paper_count <- as.numeric(urltools::param_get(url.2, "rows"))
+paper_count
+```
+
+
+
+```{r}
+
 papers.df.j <- read_multipage(url.2, doctype = "journal-paper")
 papers.df.c <- read_multipage(url.2, doctype = "conference-paper")
 papers.df.p <- read_multipage(url.2, doctype = "presentation")
