--- a/_vignettes/joining_keywords.Rmd
+++ b/_vignettes/joining_keywords.Rmd
@@ -34,6 +34,33 @@ p.df <- join_keywords(major, minor, lesser, get_papers = TRUE)
 p.df
 ```
 
+
+```{r}
+# save findings
+# save the three objects as one
+papers <- p.df
+wat_inj_ml_1 <- rNodal.utils:::as_named_list(major, minor, lesser, papers)
+save(wat_inj_ml_1, file = paste0("wat_inj_ml_1", ".rda"))
+
+# load previous save
+load(file = paste0("wat_inj_ml_1", ".rda"))
+papers <- wat_inj_ml_1$papers
+papers
+```
+
+```{r function-dev}
+save_paper_results <- function(...) {
+    # if it is a dataframe, call it papers
+    # all other objects are the search keywords
+    # put all the object in a named list using as_named_list function from rNodal.utils
+    # save the list as an rda
+    # load the .rda
+    # show the list
+}
+
+```
+
+
 ### test #2
 ```{r rows.print=20}
 # provide two different set of keywords to combine as vectors
@@ -42,8 +69,19 @@ n  <- c("machine-learning", "machine learning", "intelligent")
 p  <- c("neural network", "SVM", "genetic")
 q  <- c("algorithm")
 
-p.df <- join_keywords(m, n, p, q, get_papers = TRUE)
+p.df <- join_keywords(m, n, p, q, get_papers = TRUE, verbose = TRUE)
 p.df
+
+# save findings
+# save the three objects as one
+papers <- p.df
+wat_inj_ml_int <- rNodal.utils:::as_named_list(m, n, p, q, papers)
+save(wat_inj_ml_int, file = paste0("wat_inj_ml_int", ".rda"))
+
+# load previous save
+load(file = paste0("wat_inj_ml_int", ".rda"))
+(papers <- wat_inj_ml_int$papers)
+
 ```
 
 
