--- a/notebooks/PUNQ-S3_papers.Rmd
+++ b/notebooks/PUNQ-S3_papers.Rmd
@@ -1,15 +1,18 @@
 ---
 title: "R Notebook"
-output: html_notebook
+output:
+  html_document:
+    df_print: paged
 ---
 
 ```{r}
 library(petro.One)
+library(dplyr)
 
 major   <- c("PUNQ-S3")
 minor   <- c("machine-learning", "machine learning")
 
-search_result <- run_papers_search(major, minor, get_papers = FALSE, 
+search_result <- run_papers_search(major, minor, get_papers = TRUE, 
                                    verbose = TRUE, len_keywords = 4)
 ```
 
