--- a/notebooks/PUNQ-S3_papers.Rmd
+++ b/notebooks/PUNQ-S3_papers.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "R Notebook"
+title: "PUNQ-S3"
 output:
   html_document:
     df_print: paged
@@ -12,9 +12,11 @@ library(dplyr)
 major   <- c("PUNQ-S3")
 minor   <- c("machine-learning", "machine learning")
 
-search_result <- run_papers_search(major, minor, get_papers = TRUE, 
+search_result <- run_papers_search(major, minor, get_papers = TRUE , 
                                    verbose = TRUE, len_keywords = 4)
 ```
+
+
 
 
 ```{r rows.print=25}
@@ -22,12 +24,16 @@ papers <- search_result$papers
 papers
 ```
 
-```{r}
+```{r echo=FALSE}
+# no need of this because now is built in into the function run_papers_search()
+
 # eliminate duplicates
-papers <- papers %>% 
-    distinct(paper_id, .keep_all = TRUE) %>% 
-    distinct(book_title, .keep_all = TRUE) %>%  
-    print
+# papers <- papers %>% 
+#     distinct(paper_id, .keep_all = TRUE) %>% 
+#     distinct(book_title, .keep_all = TRUE) %>%  
+#     print
+
+# 54 vs 26
 ```
 
 ```{r rows.print=25}
@@ -43,3 +49,18 @@ papers %>%
     filter(year == 2003)
 ```
 
+### what papers have machine learning in the title
+```{r}
+papers %>%
+    # machine learning OR machine-learning
+    filter(grepl(pattern = "machine[-\\s]learning", 
+                 x = book_title, ignore.case = TRUE, perl = TRUE))
+```
+
+### what papers have PUNQ-S3 in the title
+```{r}
+papers %>%
+    # machine learning OR machine-learning
+    filter(grepl(pattern = "PUNQ-S3", 
+                 x = book_title, ignore.case = TRUE, perl = TRUE))
+```
