--- a/README.Rmd
+++ b/README.Rmd
@@ -198,10 +198,11 @@ my_url <- make_search_url(query = "well test",
                           to_year   = 2018, 
                           how = "all")
 
-get_papers_count(my_url)
-df <- read_multidoc(my_url)
+get_papers_count(my_url)      # get the paper count
+df <- read_multidoc(my_url)   # create a dataframe of papers
+print(dim(df))                # dimension of the dataframe
 
-(tf <- term_frequency(df))
+(tf <- term_frequency(df))    # create a term frequency table
 
 # calculate the minimum frequency for, let's say, the first 20th term
 min_freq <- min(head(tf, 20)$freq)
@@ -210,7 +211,8 @@ min_freq <- min(head(tf, 20)$freq)
 ### Most frequent terms in *well test*
 
 ```{r}
-# plot the 500 most freqent terms
+print(min_freq)
+# plot most frequent terms
 plot_bars(df, min.freq = min_freq)
 ```
 
@@ -244,11 +246,12 @@ my_url <- make_search_url(query = "artificial intelligence",
 
 ### By year of publication
 
-
 ```{r, echo=FALSE, results='asis'}
 pby <- papers_by_year(my_url)
 knitr::kable(head(pby, 10))
 ```
+
+
 
 # Text Mining
 
@@ -271,6 +274,7 @@ paper_results <- run_papers_search(major,
 ```
 
 ```{r}
+# plot on AI by year of publication
 papers %>% 
     group_by(year) %>% 
     na.omit() %>% 
@@ -288,24 +292,25 @@ tf
 ```
 
 ```{r}
+# one word or gram
 term_frequency_n_grams(df = papers, gram.min = 1, gram.max = 1)
 ```
 
 
 ```{r}
 # calculate the minimum frequency for, let's say, the first 20th term
-min_freq <- min(head(tf, 20)$freq)
+(min_freq <- min(head(tf, 20)$freq))
 ```
 
 ```{r}
-# plot the 20 most freqent terms
+# plot the most frequent terms
 plot_bars(papers, min.freq = min_freq)
 ```
 
 ```{r}
+# by default the number of grams is two (2)
 tf2 <- term_frequency_n_grams(papers)
 tf2
-# min_freq_2 <- min(head(tf2, 20)$freq)
 ```
 
 
@@ -313,3 +318,12 @@ tf2
 plot_bars(papers, min.freq = 100)
 ```
 
+```{r}
+# plot for two-grams
+plot_bars(papers, gram.min = 2, gram.max = 2, min.freq = 35)
+```
+
+```{r}
+# plot for three-grams
+plot_bars(papers, gram.min = 3, gram.max = 3, min.freq = 12)
+```
